assets/scss/2-modules/_global-nav.scss
.global-nav {
  background-color: $primary-red;
  height: 56px;
  margin-left: 0;
  margin-right: 0;
  max-width: 100%;
  min-width: 100%;
  padding-bottom: 10px;
  padding-left: 5%;
  padding-top: 15px;
  width: 100%;
  z-index: 1031;
}

.kcc-logo {
  margin-left: 5px;
  width: 190px;
}

@media screen and (min-width: 360px) {
  .kcc-logo {
    width: 220px;
  }
}

@media screen and (min-width: 488px) {
  .kcc-logo {
    width: 260px;
  }
}

@media screen and (min-width: 576px) {
  .kcc-logo {
    width: 300px;
  }
}

@media screen and (min-width: 992px) and (max-width: 1100px) {
  .kcc-logo {
    margin-left: -25px;
    width: 310px;
  }
}

@media screen and (min-width: 1100px) {
  .kcc-logo {
    margin-left: -25px;
    width: 340px;
  }
}

.form-inline {
  float: right;
}

.local-search {
  border-radius: 1.5em;
}

.search {
  font-size: 1.2em;
  margin-right: 40%;
}

.clearSearch {
  background-position: center 72px;
  padding-top: 72px;
}

.search-row {
  background-color: $accent-blue;
  height: 46px;
}

@media screen and (min-width: 992px) {
  .global-nav__gcse-wrapper {
    display: block;
    float: right;
    margin-top: -18px;
    width: 50%;
  }
}

.global-nav__search-icon {
  background-position: center;
  background-size: 28px 28px;
  display: inline;
  width: 28px;
  height: 28px;
}

.global-nav .global-nav__search-toggle .global-nav__search-icon {
  float: right;
}

.global-nav__search-collapse {
  display: none;
  margin-top: -85px;
}

@media screen and (min-width: 992px) {
  .global-nav__search-collapse {
    display: block;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
  }
}

.global-nav__search-collapse--visible {
  display: block;
}

.global-nav--search-toggle {
  top: 60px;
}

.global-nav__search--conatiner {
  max-width: 1100px;
  margin-left: auto;
  margin-right: auto;
}

